fix: meta description

--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -28,7 +28,7 @@
     <meta name="twitter:creator" content="@{{ site.authorHandle | replace('@', '') }}" />
 {% endif %}
 	
-{% if metaDesc %}
+{% if pageDesc %}
     <meta name="description" content="{{ metaDesc }}" />
     <meta name="twitter:description" content="{{ metaDesc }}" />
     <meta property="og:description" content="{{ metaDesc }}" />
