--- a/src/manifest.njk
+++ b/src/manifest.njk
@@ -17,7 +17,7 @@ permalink: "/manifest.webmanifest"
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "{{ site.url }}/",
   "background_color": "#F8FBFF",
   "display": "minimal-ui",
   "scope": "/",
