feat: disable Service Worker for now

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -21,7 +21,7 @@
             {% endblock content %}
         </main>
         {% include "partials/global/footer.njk" %}
-        {% if global.environment !== 'development' %}
+        {# {% if global.environment !== 'development' %}
         <script>
             if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
@@ -29,7 +29,7 @@
             });
             }
         </script>
-        {% endif %}
+        {% endif %} #}
         <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" async defer></script>
     </body>
 </html>
