fix: don't remove @ from Medium link

--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -10,7 +10,7 @@
             <p class="h3">Social media</p>
             <ul class="mt-6 list-none">
                 <li class="mb-2"><a class="no-underline" rel="external" href="https://twitter.com/{{ site.twitter | replace('@', '') }}/">{% include 'svg/twitter.svg' %} <span class="underline">Twitter</span></a></li>
-                <li class="mb-2"><a class="no-underline" rel="external" href="https://medium.com/{{ site.medium | replace('@', '') }}">{% include 'svg/medium.svg' %} <span class="underline">Medium</span></a></li>
+                <li class="mb-2"><a class="no-underline" rel="external" href="https://medium.com/{{ site.medium }}">{% include 'svg/medium.svg' %} <span class="underline">Medium</span></a></li>
                 <li class="mb-2"><a class="no-underline" rel="external" href="{{ site.youtube }}">{% include 'svg/youtube.svg' %} <span class="underline">YouTube</span></a></li>
             </ul>
         </div>
