--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -1,6 +1,6 @@
 <footer role="contentinfo" class="mt-auto text-white bg-indigo-900">
     <div class="container px-6 py-20 mx-auto lg:flex lg:flex-row lg:flex-wrap">
-        <div class="text-white brand lg:w-full">
+        <div class="text-white lg:w-full">
             <a rel="home" href="/">
                 {% include "svg/logo-wordmark.svg" %}
                 <span class="sr-only">Inclusive Design Research Centre</span>
