fix: reconfigure uploaded media

--- a/src/_includes/partials/global/footer.njk
+++ b/src/_includes/partials/global/footer.njk
@@ -14,7 +14,7 @@
                 <li class="mb-2"><a class="no-underline" rel="external" href="{{ site.youtube }}">{% include 'svg/youtube.svg' %} <span class="underline">YouTube</span></a></li>
             </ul>
         </div>
-        <div class="mt-12 contact lg:w-2/3 lg:flex lg:flex-row lg:flex-wrap">
+        <div id="contact-us" class="mt-12 contact lg:w-2/3 lg:flex lg:flex-row lg:flex-wrap">
             <p class="h3 lg:w-full lg:mb-6">Contact us</p>
             <div class="lg:w-1/2 lg:mt-0">
                 <p class="h4">Email</p>
