--- a/src/_includes/partials/global/meta-info.njk
+++ b/src/_includes/partials/global/meta-info.njk
@@ -40,8 +40,8 @@
     <meta property="og:image:alt" content="Preview image for {{ site.name }}" />
     <meta name="twitter:image:alt" content="Preview image for {{ site.name }}" />
 {% else %}
-    <meta property="og:image" content="/images/opengraph.png" />
-    <meta name="twitter:image" content="/images/opengraph.png" />
+    <meta property="og:image" content="{{ global.baseUrl }}/images/opengraph.png" />
+    <meta name="twitter:image" content="{{ global.baseUrl }}/images/opengraph.png" />
     <meta property="og:image:alt" content="Logo of the Inclusive Design Research Centre" />
     <meta name="twitter:image:alt" content="Logo of the Inclusive Design Research Centre" />
 {% endif %}
