feat: add 404 (resolve #10)

--- a/src/scss/idrc.scss
+++ b/src/scss/idrc.scss
@@ -40,7 +40,8 @@
 // 6. Page-specific styles
 @import
   'pages/home',
-  'pages/generic';
+  'pages/generic',
+  'pages/404';
 
 // 7. Themes
 @import
