--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -30,6 +30,6 @@
             }
         </script>
         {% endif %} #}
-        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" async defer></script>
+        <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
     </body>
 </html>
