--- a/src/admin.njk
+++ b/src/admin.njk
@@ -15,6 +15,7 @@ permalink: '/admin/index.html'
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="/node_modules/nunjucks/browser/nunjucks-slim.js"></script>
+  <script src="/admin/util.js"></script>
   <script src="/admin/templates.js"></script>
   <script src="/admin/previews.js" type="text/babel"></script>
   <script>
