--- a/src/_includes/partials/components/brand.njk
+++ b/src/_includes/partials/components/brand.njk
@@ -1,4 +1,4 @@
-<a class="brand text-{{ headertextcolor if headertextcolor else 'brand' }}" rel="home" href="/">
+<a class="brand{{ ' text-' + headertextcolor if headertextcolor }}" rel="home" href="/">
     {% include "svg/logo.svg" %}
     <span class="sr-only">Inclusive Design Research Centre</span>
 </a>
