--- a/src/_includes/partials/global/header.njk
+++ b/src/_includes/partials/global/header.njk
@@ -1,4 +1,4 @@
-<header role="banner" class="banner{{ ' bg-' + headerbgcolor if headerbgcolor }}{{ ' text-' + headertextcolor if headertextcolor }}">
+<header role="banner" class="banner{{ ' bg-' + headerBgColor if headerBgColor }}{{ ' text-' + headerTextColor if headerTextColor }}">
     <div class="container">
         {% include "partials/components/brand.njk" %}
         {% include "partials/components/navigation.njk" %}
