feat: add scatterplot graphic

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -2,19 +2,43 @@
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
 #what-is-inclusive-design {
-  @apply pt-48 relative;
+  .section__content {
+    @apply pt-32 px-0 relative;
 
-  &::before {
-    background: radial-gradient(50% 50% at 50% 50%, #fff 0%, rgba(255, 255, 255, 0) 100%) no-repeat 50% 50% / 100% 100%;
-    content: "";
-    height: 40rem;
-    mask-image: url('../images/scatterplot.svg');
-    mask-position: center;
-    mask-repeat: no-repeat;
-    mask-size: cover;
-    top: -12rem;
-    width: 40rem;
+    > * {
+      @apply relative z-10;
+    }
 
-    @apply block absolute;
+    &::before {
+      @apply block absolute ;
+
+      background: radial-gradient(50% 50% at 50% 50%, #fff 0%, rgba(255, 255, 255, 0) 100%) no-repeat 50% 50% / 100% 100%;
+      content: "";
+      height: 40rem;
+      left: -15rem;
+      mask-image: url('../images/scatterplot.svg');
+      mask-position: center;
+      mask-repeat: no-repeat;
+      mask-size: cover;
+      top: -15rem;
+      width: 40rem;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #what-is-inclusive-design {
+    .section__content {
+      @apply pt-0;
+
+      padding-left: calc(50% + 3rem);
+
+      &::before {
+        height: 48rem;
+        left: -2rem;
+        top: -12rem;
+        width: 48rem;
+      }
+    }
   }
 }
