--- a/src/admin.njk
+++ b/src/admin.njk
@@ -19,7 +19,7 @@ permalink: '/admin/index.html'
   <script src="/admin/templates.js"></script>
   <script src="/admin/previews.js" type="text/babel"></script>
   <script>
-    CMS.registerPreviewStyle(`{% include "src/_includes/static/css/idrc.css" %}`, { raw: true })
+    CMS.registerPreviewStyle('/css/idrc.css')
   </script>
 </body>
 </html>
