fix: center on left half of screen

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -37,7 +37,7 @@
 
       &::before {
         height: 56rem;
-        left: -2rem;
+        left: -14vw;
         top: -16rem;
         width: 56rem;
       }
