feat: remove tailwind [WIP]

--- a/src/_includes/layouts/404.njk
+++ b/src/_includes/layouts/404.njk
@@ -3,8 +3,8 @@
 {% set pageType = 'page--404' %}
 
 {% block content %}
-    <article class="container pt-20 mx-auto text-white bg-indigo-900 lg:pt-64">
-        <header class="text-center">
+    <article class="container pt-20 mx-auto lg:pt-64">
+        <header>
             <div class="container mx-auto">
                 <h1 class="px-6 md:w-3/4 lg:w-1/2 xl:w-5/12 md:mx-auto">{{ title }}</h1>
             </div>
