--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,7 +14,7 @@
         {% block head %}
         {% endblock %}
     </head>
-    <body class="{{ pageType }} flex flex-col justify-start min-h-screen">
+    <body class="{{ pageType }}">
         {% include "partials/global/header.njk" %}{% endif %}
         <main>
             {% block content %}
