--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -1,3 +1,10 @@
 // -----------------------------------------------------------------------------
 // This file contains CSS helper classes.
 // -----------------------------------------------------------------------------
+.sr-only {
+  @include sr-only();
+}
+
+.container {
+  width: 100%;
+}
