--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,13 +3,14 @@
 // -----------------------------------------------------------------------------
 button:hover,
 button:focus {
-  @apply bg-yellow-500 outline-none;
+  background: $yellow-500;
+  outline: none;
 }
 
 .bg-indigo-900 {
   button:hover,
   button:focus {
-    @apply bg-indigo-500;
+    background: $indigo-500;
   }
 }
 
@@ -18,6 +19,6 @@ button:focus {
 .bg-yellow-500 {
   button:hover,
   button:focus {
-    @apply bg-white;
+    background: $white;
   }
 }
