--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,9 +2,15 @@
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
 .banner {
-  @apply pt-6 bg-indigo-100 text-black;
+  background: $indigo-100;
+  color: $black;
+  padding-top: 1.5rem;
 }
 
 .banner .container {
-  @apply flex flex-row items-center px-6 mx-auto;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+  padding: 0 1.5rem;
 }
