--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -11,7 +11,7 @@ body {
   color: $black;
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   min-height: 100vh;
 }
 
