--- a/src/_includes/layouts/404.njk
+++ b/src/_includes/layouts/404.njk
@@ -3,14 +3,14 @@
 {% set pageType = 'page--404' %}
 
 {% block content %}
-    <article class="container pt-20 mx-auto lg:pt-64">
+    <article>
         <header>
-            <div class="container mx-auto">
-                <h1 class="px-6 md:w-3/4 lg:w-1/2 xl:w-5/12 md:mx-auto">{{ title }}</h1>
+            <div class="container inner">
+                <h1>{{ title }}</h1>
             </div>
         </header>
-        <div class="pt-4 text-center content md:w-3/4 lg:w-1/2 xl:w-5/12 md:mx-auto">
-            <div class="container px-6">
+        <div class="content">
+            <div class="inner">
             {{ content | safe }}
             </div>
         </div>
