--- a/src/_includes/layouts/news.njk
+++ b/src/_includes/layouts/news.njk
@@ -3,24 +3,24 @@
 {% set pageType = 'page--news' %}
 
 {% block content %}
-    <article class="container mx-auto">
-        <header class="py-20 text-black bg-blue-500">
-            <div class="container mx-auto">
-                <h1 class="px-6 md:mx-auto">{{ title }}</h1>
+    <article class="container">
+        <header>
+            <div class="container inner">
+                <h1>{{ title }}</h1>
             </div>
         </header>
-        <div class="py-10 content md:w-3/4 lg:w-1/2 xl:w-5/12 md:mx-auto lg:py-20">
-            <div class="container px-6">
+        <div class="content">
+            <div class="inner">
             {% if posts.length %}
                 {% for item in posts %}
                 {% set excerpt = item.data.content.split('.')[0] + '.' %}
                 {% if item.data.excerpt %}
                 {% set excerpt = item.data.excerpt %}
                 {% endif %}
-                <article class="my-20">
-                    <span class="block w-20 mb-10 border-b-2 border-indigo-500 hr"></span>
+                <article class="entry">
+                    <span class="hr"></span>
                     <h2>{{ item.data.title }}</h2>
-                    <p class="mt-6 metadata small">
+                    <p class="metadata">
                         By {{ item.data.author }}
                         {% if item.data.date %}
                         <span aria-hidden="true"> &middot; </span>
@@ -39,17 +39,17 @@
             </div>
         </div>
         {% if pagination.pages.length > 1 %}
-        <nav class="py-10 text-center pagination content md:w-3/4 lg:w-1/2 xl:w-5/12 md:mx-auto lg:py-20" aria-labelledby="pagination">
+        <nav class="pagination" aria-labelledby="pagination">
             <h2 id="pagination" class="sr-only">news page navigation</h2>
-            <ul class="container flex flex-row justify-center px-6 list-none">
+            <ul class="container">
             {%- if pagination.href.previous %}
-                <li><a class="flex flex-row items-center justify-center w-6 h-8 mx-1 align-middle" href="{{ pagination.href.previous }}">{% include 'svg/previous.svg' %}<span class="sr-only">previous</span></a></li>
+                <li><a href="{{ pagination.href.previous }}">{% include 'svg/previous.svg' %}<span class="sr-only">previous</span></a></li>
             {%- endif %}
             {%- for pageEntry in pagination.pages %}
-                <li><a class="flex flex-row items-center justify-center w-6 h-8 mx-1 align-middle" href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
+                <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>{{ loop.index }}</a></li>
             {%- endfor %}
             {%- if pagination.href.next %}
-                <li><a class="flex flex-row items-center justify-center w-6 h-8 mx-1 align-middle" href="{{ pagination.href.next }}"><span class="sr-only">next</span>{% include 'svg/next.svg' %}</a></li>
+                <li><a href="{{ pagination.href.next }}"><span class="sr-only">next</span>{% include 'svg/next.svg' %}</a></li>
             {%- endif %}
             </ul>
         </nav>
