--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -7,4 +7,20 @@
 
 .container {
   width: 100%;
+
+  @media (min-width: 640px) {
+    max-width: 640px;
+  }
+
+  @media (min-width: 768px) {
+    max-width: 768px;
+  }
+
+  @media (min-width: 1024px) {
+    max-width: 1024px;
+  }
+
+  @media (min-width: 1280px) {
+    max-width: 1280px;
+  }
 }
