--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -74,7 +74,7 @@
 }
 
 nav a[aria-current="page"] {
-  border: 2px solid currentColor;
+  border-bottom: 2px solid currentColor;
 }
 
 .pagination a {
